// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum PropertyType {
  RESIDENTIAL
  CONDO
}

enum UserType {
  BUYER
  REALTOR
  ADMIN
}

model User {
  id               Int       @id @default(autoincrement())
  name             String
  phone            String
  email            String    @unique
  password         String
  created_at       DateTime  @default(now())
  updated_at       DateTime  @updatedAt
  user_type        UserType
  homes            Home[]
  realtor_messages Message[] @relation("realtor_messages")
  buyer_messages   Message[] @relation("buyer_messages")
}

model Message {
  id         Int    @id @default(autoincrement())
  message    String
  home_id    Int
  home       Home   @relation(fields: [home_id], references: [id])
  realtor_id Int
  realtor    User   @relation("realtor_messages", fields: [realtor_id], references: [id])
  buyer_id   Int
  buyer      User   @relation("buyer_messages", fields: [buyer_id], references: [id])
}

model Home {
  id                  Int          @id @default(autoincrement())
  address             String
  number_of_bedrooms  Int
  number_of_bathrooms Float
  city                String
  listed_date         DateTime     @default(now())
  price               Float
  land_size           Float
  propertyType        PropertyType
  created_at          DateTime     @default(now())
  updated_at          DateTime     @updatedAt
  images              Image[]
  realtor_id          Int
  realtor             User         @relation(fields: [realtor_id], references: [id])
  messages            Message[]
}

model Image {
  id         Int      @id @default(autoincrement())
  url        String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  home_id    Int
  home       Home     @relation(fields: [home_id], references: [id])
}
